--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   notificationservice:
     build: .  # Assuming your Dockerfile is in the same directory as docker-compose.yml
+    container_name: notificationservice
     ports:
       - "9098:9098"
     environment:
