--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.security.user.password=***
 spring.security.user.roles=ADMIN
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=tradeport-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -21,15 +21,15 @@ kafka.topic.tradeport-notified=tradeport-notified
 # Mail Configuration
 #mail.username=${MAIL_USERNAME}
 #mail.password=${MAIL_PASSWORD}
-#mail.smtp.auth=${mail.smtp.auth}
-#mail.smtp.starttls.enable=${mail.smtp.starttls.enable}
-#mail.smtp.host=${mail.smtp.host}
-#mail.smtp.port=${mail.smtp.port}
-#mail.recipient=${mail.recipient}
+#mail.smtp.auth=${MAIL_SMTP_AUTH}
+#mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS_ENABLE}
+#mail.smtp.host=${MAIL_SMTP_HOST}
+#mail.smtp.port=${MAIL_SMTP_PORT}
+#mail.recipient=${MAIL_RECIPIENT}
 
 
-mail.username=prabhulalitha48@gmail.com
-mail.password=******
+mail.username=${MAIL_USERNAME}
+mail.password=${MAIL_PASSWORD}
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.smtp.host=smtp.gmail.com
