--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
-name: CD - Stage 1 - Deploy to Dockerhub
+# .github/workflows/cd.yml
+
+name: CD - Stage 1 - Deploy to DockerHub
 
 on:
   push:
@@ -9,23 +11,76 @@ on:
       - main
 
 jobs:
-  build:
-    name: Build Docker Images
+  # Combine Build, Test, and Sonar Analysis into one job
+  build_and_scan:
+    name: Build, Test, and Analyze
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        # Required for SonarQube PR analysis to fetch git history
+        with:
+          fetch-depth: 0
+
+      - name: Set Up Java and Maven
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven' # Optional: Cache Maven dependencies
+
+      # Build, package, run tests, AND prepare for Sonar analysis in one command
+      # The verify goal runs phases up to 'verify' (includes compile, test, package)
+      # The sonar:sonar goal performs the analysis using the Maven plugin
+      # Run the command on a single line to avoid shell parsing issues with line breaks
+      - name: Build, Package, Test, and Analyze
+        run: mvn verify sonar:sonar -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        env:
+          # Required by SonarCloud for Pull Request decoration / analysis
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Token for authenticating with SonarCloud
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # Optional: Verify compiled classes exist (useful for debugging)
+      - name: Verify Compiled Classes Exist
+        run: |
+          echo "Checking for compiled Java classes in target/classes..."
+          ls -l target || echo "INFO: target/ directory might not exist if build failed."
+          ls -l target/classes || echo "WARNING: target/classes directory is missing!"
+          # Use find and check exit code to avoid workflow error if no files found
+          find target/classes -name "*.class" > /dev/null 2>&1
+          if [ $? -ne 0 ]; then
+            echo "WARNING: No compiled class files found in target/classes!"
+          else
+            echo "INFO: Compiled class files found."
+          fi
+
+  deploy:
+    name: Build and Deploy Docker Image
+    runs-on: ubuntu-latest
+    # This job now depends on the combined build_and_scan job succeeding
+    needs: build_and_scan
+    # IMPORTANT: Only run deployment on actual pushes to the main branch,
+    # not on pull request builds or pushes to other branches.
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        
-      - name: Log in to Docker Hub
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v3 # Use v3 or latest stable
 
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v3
+      - name: Log In to Docker Hub
+        uses: docker/login-action@v3 # Use v3 or latest stable
         with:
-          context: .
-          file: ../tradeport-backend-notificationservice/Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5 # Use v5 or latest stable
+        with:
+          context: . # Assumes Dockerfile is in the root of the repository checkout
+          # If your Dockerfile is in a subdirectory (like the original example), uncomment and adjust path:
+          # file: ./tradeport-backend-notificationservice/Dockerfile
           push: true
-          tags: prabhulalithakrishnan/notificationservice:latest
+          tags: prabhulalithakrishnan/notificationservice:latest # Adjust tag as needed
