--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,13 +28,18 @@ kafka.topic.tradeport-notified=tradeport-notified
 #mail.recipient=${MAIL_RECIPIENT}
 
 
-mail.username=${MAIL_USERNAME}
-mail.password=${MAIL_PASSWORD}
+aws.access.key=${AWS_ACCESS_KEY}
+aws.secret.key=${AWS_SECRET_KEY}
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
-mail.smtp.host=smtp.gmail.com
+#mail.smtp.host=smtp.gmail.com
+mail.smtp.host=email-smtp.ap-southeast-1.amazonaws.com
 mail.smtp.port=587
-mail.recipient=prabhulalitha48@gmail.com
+#mail.recipient=prabhulalitha48@gmail.com
+mail.fromemail=prabhulalitha48@gmail.com
+
+mail.username=${MAIL_USERNAME}
+mail.password=${MAIL_PASSWORD}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
