--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,13 +69,10 @@ jobs:
 
       - name: Set Up Docker Buildx
         uses: docker/setup-buildx-action@v3 # Use v3 or latest stable
-
-      - name: Log In to Docker Hub
-        uses: docker/login-action@v3 # Use v3 or latest stable
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+         
+      - name: Log in to Docker Hub  # Authenticate with Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5 # Use v5 or latest stable
         with:
