--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 
 spring.security.enabled=false
 spring.security.user.name=admin
-spring.security.user.password=***
+spring.security.user.password=
 spring.security.user.roles=ADMIN
 
 # Kafka Configuration
