--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,8 @@ mail.smtp.port=587
 #mail.recipient=prabhulalitha48@gmail.com
 mail.fromemail=prabhulalitha48@gmail.com
 
-mail.username=${MAIL_USERNAME}
-mail.password=${MAIL_PASSWORD}
+mail.username=prabhulalitha48@gmail.com
+mail.password=4444
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
