--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.security.user.password=
 spring.security.user.roles=ADMIN
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=kafka:9092
+#spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:my-kafka-cluster-kafka-bootstrap.kafka-namespace:9092}
 spring.kafka.consumer.group-id=tradeport-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
