Update Kafka bootstrap server configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.security.user.roles=ADMIN
 
 # Kafka Configuration
 #spring.kafka.bootstrap-servers=kafka:9092
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka.backend-namespace-ec2.svc.cluster.local:9092}
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:my-cluster-kafka-bootstrap.backend-namespace-ec2.svc.cluster.local:9092}
 spring.kafka.consumer.group-id=tradeport-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
