Aws eks auth chnages5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ mail.smtp.port=587
 mail.fromemail=prabhulalitha48@gmail.com
 
 mail.username=prabhulalitha48@gmail.com
-mail.password=4444
+mail.password=${PASS_CODE}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
